# Assistance-recherche-d-emploi-via-IA

./: .gitignore  README.md  pyproject.toml  requirements.md
src/gojob/: crewai_st.py  models_st.py  transfert.py
src/gojob/config/: agents_st.yaml  tasks_st.yaml
src/gojob/db/6b510f40-6943-44c4-86df-047d03f72d1f/: index_metadata.pickle
src/gojob/output/: company_research.json  final_report.md  job_analysis.json  optimized_resume.md  resume_optimization.json
src/gojob/pages/: Job_description.py  Rapport.py
src/gojob/pages/db/: chroma.sqlite3
src/gojob/tools/: qdrant_vector_search_tool.py
