[project]
name = "gojob"
version = "0.1.0"
description = "gojob using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
gojob = "gojob.main:run"
run_crew = "gojob.main:run"
train = "gojob.main:train"
replay = "gojob.main:replay"
test = "gojob.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
